Finished all DB functionality. Added About page

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,8 +1,36 @@
-<div class="col-md-3">
-  <div class="todolist">
-    <h1>Already Done</h1>
-    <ul id="done-items" class="list-unstyled">
-      <li>Some item <button class="remove-item btn btn-default btn-xs pull-right"><span class="glyphicon glyphicon-remove"></span></button></li>
-    </ul>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div>
+        <h1 class="display-4 jumbotron">Technologies Used</h1>
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-md-6">
+              <a href="https://getbootstrap.com/">
+                <img class="img-responsive" src="assets/images/bootstrapLogo.jpg">
+              </a>
+            </div>
+            <div class="col-md-6">
+              <a href="https://www.emberjs.com/">
+                <img class="img-responsive" src="assets/images/emberLogo.png">
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <a href="https://nodejs.org/en/">
+              <img class="img-responsive" src="assets/images/nodejsLogo.png">
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="https://www.postgresql.org">
+              <img class="img-responsive" src="assets/images/postgresqlLogo.png">
+            </a>
+          </div>
+        </div>
+
+      </div>
+    </div>
   </div>
 </div>
